# xion-sdk-onchain-integration

./: .gitignore  Cargo.toml  README.md
artifacts/: checksums.txt  cw_counter.wasm  reclaim_xion.wasm
node/: .env.example  add-epoch.js  config.js  get-epoch.js  package-lock.json  package.json  verify_proof.js  zkfetch.js
src/: claims.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
