[package]
name = "reclaim-xion"
version = "0.1.0"
authors = ["Hadi Saleh"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-std = "2.2.2"
cw-storage-plus = "2.0.0"
schemars = "0.8.21"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
thiserror = "1.0.69"

sha2 = "0.10.8"
sha3 = { version = "0.10.8"}
hex = "0.4.3"
ecdsa = { version = "0.16.9", features = ["verifying", "alloc"]}
k256 = { version = "0.13.3", default-features = false, features = ["ecdsa-core", "ecdsa"] }
digest = {version = "0.10", default-features = false }

[dev-dependencies]
cw-multi-test = "2"
